04/program4.output
Terminals unused in grammar

   ER_WD
   ER_CH


State 166 conflicts: 9 reduce/reduce
State 167 conflicts: 9 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: classDeclarations

    2 classDeclarations: CLASS ID classBody

    3 classBody: LBRACE varDeclHeaderChoice

    4 varDeclHeaderChoice: INT bracks ID SEMI varDeclHeaderChoice
    5                    | ID bracks ID SEMI varDeclHeaderChoice
    6                    | ID LPAREN parameterList RPAREN block varDeclHeaderChoice
    7                    | VOID ID LPAREN parameterList RPAREN block varDeclHeaderChoice
    8                    | INT bracks ID LPAREN parameterList RPAREN block varDeclHeaderChoice
    9                    | ID bracks ID LPAREN parameterList RPAREN block varDeclHeaderChoice
   10                    | RBRACE

   11 type: INT bracks
   12     | ID bracks

   13 parameterList: parameter parameterListStar
   14              | %empty

   15 parameterListStar: COMMA parameter parameterListStar
   16                  | %empty

   17 parameter: type ID

   18 block: LBRACE blockHeadChoice

   19 blockHeadChoice: localVarDeclaration blockHeadChoice
   20                | statement blockHeadChoice
   21                | RBRACE

   22 localVarDeclaration: type ID SEMI

   23 statement: SEMI
   24          | thisName ASSIGN expression SEMI
   25          | thisName LPAREN argList RPAREN SEMI
   26          | PRINT LPAREN argList RPAREN SEMI
   27          | conditionalStatement
   28          | WHILE LPAREN expression RPAREN statement
   29          | RETURN expression SEMI
   30          | RETURN SEMI
   31          | block

   32 thisName: THIS name
   33         | name

   34 name: ID
   35     | ID DOT name
   36     | ID brackExp

   37 argList: expression argList
   38        | %empty

   39 conditionalStatement: IF LPAREN expression RPAREN statement
   40                     | IF LPAREN expression RPAREN statement ELSE statement

   41 expression: thisName
   42           | LPAREN expression RPAREN
   43           | NUMBER
   44           | NULLT
   45           | thisName LPAREN argList RPAREN
   46           | READ LPAREN RPAREN
   47           | newExpression
   48           | expression PLUS expression
   49           | expression MINUS expression
   50           | expression OR expression
   51           | expression AND expression
   52           | expression TIMES expression
   53           | expression DIV expression
   54           | expression MOD expression
   55           | expression EQ expression
   56           | expression NE expression
   57           | expression LT expression
   58           | expression GT expression
   59           | expression LE expression
   60           | expression GE expression
   61           | PLUS expression
   62           | MINUS expression
   63           | NOT expression

   64 newExpression: NEW ID LPAREN argList RPAREN
   65              | NEW newExpTypes
   66              | NEW newExpTypes bracks
   67              | NEW newExpTypes brackExp
   68              | NEW newExpTypes brackExp bracks

   69 newExpTypes: ID
   70            | INT

   71 brackExp: LBRACKET expression RBRACKET brackExp
   72         | LBRACKET expression RBRACKET

   73 bracks: LBRACKET RBRACKET bracks
   74       | LBRACKET RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
"shift" (258)
"reduce" (259)
SEMI (260) 4 5 22 23 24 25 26 29 30
DOT (261) 35
COMMA (262) 15
ID (263) 2 4 5 6 7 8 9 12 17 22 34 35 36 64 69
LPAREN (264) 6 7 8 9 25 26 28 39 40 42 45 46 64
RPAREN (265) 6 7 8 9 25 26 28 39 40 42 45 46 64
LBRACKET (266) 71 72 73 74
RBRACKET (267) 71 72 73 74
RBRACE (268) 10 21
LBRACE (269) 3 18
NUMBER (270) 43
NULLT (271) 44
READ (272) 46
NEW (273) 64 65 66 67 68
THIS (274) 32
IF (275) 39 40
ELSE (276) 40
WHILE (277) 28
RETURN (278) 29 30
CLASS (279) 2
PRINT (280) 26
VOID (281) 7
PLUS (282) 48 61
MINUS (283) 49 62
NOT (284) 63
OR (285) 50
TIMES (286) 52
DIV (287) 53
MOD (288) 54
AND (289) 51
EQ (290) 55
NE (291) 56
GE (292) 60
LE (293) 59
GT (294) 58
LT (295) 57
ASSIGN (296) 24
INT (297) 4 8 11 70
ER_WD (298)
ER_CH (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
classDeclarations (47)
    on left: 2, on right: 1
classBody (48)
    on left: 3, on right: 2
varDeclHeaderChoice (49)
    on left: 4 5 6 7 8 9 10, on right: 3 4 5 6 7 8 9
type (50)
    on left: 11 12, on right: 17 22
parameterList (51)
    on left: 13 14, on right: 6 7 8 9
parameterListStar (52)
    on left: 15 16, on right: 13 15
parameter (53)
    on left: 17, on right: 13 15
block (54)
    on left: 18, on right: 6 7 8 9 31
blockHeadChoice (55)
    on left: 19 20 21, on right: 18 19 20
localVarDeclaration (56)
    on left: 22, on right: 19
statement (57)
    on left: 23 24 25 26 27 28 29 30 31, on right: 20 28 39 40
thisName (58)
    on left: 32 33, on right: 24 25 41 45
name (59)
    on left: 34 35 36, on right: 32 33 35
argList (60)
    on left: 37 38, on right: 25 26 37 45 64
conditionalStatement (61)
    on left: 39 40, on right: 27
expression (62)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63, on right: 24 28 29 37 39 40 42 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 71 72
newExpression (63)
    on left: 64 65 66 67 68, on right: 47
newExpTypes (64)
    on left: 69 70, on right: 65 66 67 68
brackExp (65)
    on left: 71 72, on right: 36 67 68 71
bracks (66)
    on left: 73 74, on right: 4 5 8 9 11 12 66 68 73


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program            go to state 2
    classDeclarations  go to state 3


State 1

    2 classDeclarations: CLASS . ID classBody

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: classDeclarations .

    $default  reduce using rule 1 (program)


State 4

    2 classDeclarations: CLASS ID . classBody

    LBRACE  shift, and go to state 6

    classBody  go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    3 classBody: LBRACE . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 12


State 7

    2 classDeclarations: CLASS ID classBody .

    $default  reduce using rule 2 (classDeclarations)


State 8

    5 varDeclHeaderChoice: ID . bracks ID SEMI varDeclHeaderChoice
    6                    | ID . LPAREN parameterList RPAREN block varDeclHeaderChoice
    9                    | ID . bracks ID LPAREN parameterList RPAREN block varDeclHeaderChoice

    LPAREN    shift, and go to state 13
    LBRACKET  shift, and go to state 14

    bracks  go to state 15


State 9

   10 varDeclHeaderChoice: RBRACE .

    $default  reduce using rule 10 (varDeclHeaderChoice)


State 10

    7 varDeclHeaderChoice: VOID . ID LPAREN parameterList RPAREN block varDeclHeaderChoice

    ID  shift, and go to state 16


State 11

    4 varDeclHeaderChoice: INT . bracks ID SEMI varDeclHeaderChoice
    8                    | INT . bracks ID LPAREN parameterList RPAREN block varDeclHeaderChoice

    LBRACKET  shift, and go to state 14

    bracks  go to state 17


State 12

    3 classBody: LBRACE varDeclHeaderChoice .

    $default  reduce using rule 3 (classBody)


State 13

    6 varDeclHeaderChoice: ID LPAREN . parameterList RPAREN block varDeclHeaderChoice

    ID   shift, and go to state 18
    INT  shift, and go to state 19

    $default  reduce using rule 14 (parameterList)

    type           go to state 20
    parameterList  go to state 21
    parameter      go to state 22


State 14

   73 bracks: LBRACKET . RBRACKET bracks
   74       | LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 23


State 15

    5 varDeclHeaderChoice: ID bracks . ID SEMI varDeclHeaderChoice
    9                    | ID bracks . ID LPAREN parameterList RPAREN block varDeclHeaderChoice

    ID  shift, and go to state 24


State 16

    7 varDeclHeaderChoice: VOID ID . LPAREN parameterList RPAREN block varDeclHeaderChoice

    LPAREN  shift, and go to state 25


State 17

    4 varDeclHeaderChoice: INT bracks . ID SEMI varDeclHeaderChoice
    8                    | INT bracks . ID LPAREN parameterList RPAREN block varDeclHeaderChoice

    ID  shift, and go to state 26


State 18

   12 type: ID . bracks

    LBRACKET  shift, and go to state 14

    bracks  go to state 27


State 19

   11 type: INT . bracks

    LBRACKET  shift, and go to state 14

    bracks  go to state 28


State 20

   17 parameter: type . ID

    ID  shift, and go to state 29


State 21

    6 varDeclHeaderChoice: ID LPAREN parameterList . RPAREN block varDeclHeaderChoice

    RPAREN  shift, and go to state 30


State 22

   13 parameterList: parameter . parameterListStar

    COMMA  shift, and go to state 31

    $default  reduce using rule 16 (parameterListStar)

    parameterListStar  go to state 32


State 23

   73 bracks: LBRACKET RBRACKET . bracks
   74       | LBRACKET RBRACKET .

    LBRACKET  shift, and go to state 14

    $default  reduce using rule 74 (bracks)

    bracks  go to state 33


State 24

    5 varDeclHeaderChoice: ID bracks ID . SEMI varDeclHeaderChoice
    9                    | ID bracks ID . LPAREN parameterList RPAREN block varDeclHeaderChoice

    SEMI    shift, and go to state 34
    LPAREN  shift, and go to state 35


State 25

    7 varDeclHeaderChoice: VOID ID LPAREN . parameterList RPAREN block varDeclHeaderChoice

    ID   shift, and go to state 18
    INT  shift, and go to state 19

    $default  reduce using rule 14 (parameterList)

    type           go to state 20
    parameterList  go to state 36
    parameter      go to state 22


State 26

    4 varDeclHeaderChoice: INT bracks ID . SEMI varDeclHeaderChoice
    8                    | INT bracks ID . LPAREN parameterList RPAREN block varDeclHeaderChoice

    SEMI    shift, and go to state 37
    LPAREN  shift, and go to state 38


State 27

   12 type: ID bracks .

    $default  reduce using rule 12 (type)


State 28

   11 type: INT bracks .

    $default  reduce using rule 11 (type)


State 29

   17 parameter: type ID .

    $default  reduce using rule 17 (parameter)


State 30

    6 varDeclHeaderChoice: ID LPAREN parameterList RPAREN . block varDeclHeaderChoice

    LBRACE  shift, and go to state 39

    block  go to state 40


State 31

   15 parameterListStar: COMMA . parameter parameterListStar

    ID   shift, and go to state 18
    INT  shift, and go to state 19

    type       go to state 20
    parameter  go to state 41


State 32

   13 parameterList: parameter parameterListStar .

    $default  reduce using rule 13 (parameterList)


State 33

   73 bracks: LBRACKET RBRACKET bracks .

    $default  reduce using rule 73 (bracks)


State 34

    5 varDeclHeaderChoice: ID bracks ID SEMI . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 42


State 35

    9 varDeclHeaderChoice: ID bracks ID LPAREN . parameterList RPAREN block varDeclHeaderChoice

    ID   shift, and go to state 18
    INT  shift, and go to state 19

    $default  reduce using rule 14 (parameterList)

    type           go to state 20
    parameterList  go to state 43
    parameter      go to state 22


State 36

    7 varDeclHeaderChoice: VOID ID LPAREN parameterList . RPAREN block varDeclHeaderChoice

    RPAREN  shift, and go to state 44


State 37

    4 varDeclHeaderChoice: INT bracks ID SEMI . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 45


State 38

    8 varDeclHeaderChoice: INT bracks ID LPAREN . parameterList RPAREN block varDeclHeaderChoice

    ID   shift, and go to state 18
    INT  shift, and go to state 19

    $default  reduce using rule 14 (parameterList)

    type           go to state 20
    parameterList  go to state 46
    parameter      go to state 22


State 39

   18 block: LBRACE . blockHeadChoice

    SEMI    shift, and go to state 47
    ID      shift, and go to state 48
    RBRACE  shift, and go to state 49
    LBRACE  shift, and go to state 39
    THIS    shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    RETURN  shift, and go to state 53
    PRINT   shift, and go to state 54
    INT     shift, and go to state 19

    type                  go to state 55
    block                 go to state 56
    blockHeadChoice       go to state 57
    localVarDeclaration   go to state 58
    statement             go to state 59
    thisName              go to state 60
    name                  go to state 61
    conditionalStatement  go to state 62


State 40

    6 varDeclHeaderChoice: ID LPAREN parameterList RPAREN block . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 63


State 41

   15 parameterListStar: COMMA parameter . parameterListStar

    COMMA  shift, and go to state 31

    $default  reduce using rule 16 (parameterListStar)

    parameterListStar  go to state 64


State 42

    5 varDeclHeaderChoice: ID bracks ID SEMI varDeclHeaderChoice .

    $default  reduce using rule 5 (varDeclHeaderChoice)


State 43

    9 varDeclHeaderChoice: ID bracks ID LPAREN parameterList . RPAREN block varDeclHeaderChoice

    RPAREN  shift, and go to state 65


State 44

    7 varDeclHeaderChoice: VOID ID LPAREN parameterList RPAREN . block varDeclHeaderChoice

    LBRACE  shift, and go to state 39

    block  go to state 66


State 45

    4 varDeclHeaderChoice: INT bracks ID SEMI varDeclHeaderChoice .

    $default  reduce using rule 4 (varDeclHeaderChoice)


State 46

    8 varDeclHeaderChoice: INT bracks ID LPAREN parameterList . RPAREN block varDeclHeaderChoice

    RPAREN  shift, and go to state 67


State 47

   23 statement: SEMI .

    $default  reduce using rule 23 (statement)


State 48

   12 type: ID . bracks
   34 name: ID .
   35     | ID . DOT name
   36     | ID . brackExp

    DOT       shift, and go to state 68
    LBRACKET  shift, and go to state 69

    $default  reduce using rule 34 (name)

    brackExp  go to state 70
    bracks    go to state 27


State 49

   21 blockHeadChoice: RBRACE .

    $default  reduce using rule 21 (blockHeadChoice)


State 50

   32 thisName: THIS . name

    ID  shift, and go to state 71

    name  go to state 72


State 51

   39 conditionalStatement: IF . LPAREN expression RPAREN statement
   40                     | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 73


State 52

   28 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 74


State 53

   29 statement: RETURN . expression SEMI
   30          | RETURN . SEMI

    SEMI    shift, and go to state 75
    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 85
    newExpression  go to state 86


State 54

   26 statement: PRINT . LPAREN argList RPAREN SEMI

    LPAREN  shift, and go to state 87


State 55

   22 localVarDeclaration: type . ID SEMI

    ID  shift, and go to state 88


State 56

   31 statement: block .

    $default  reduce using rule 31 (statement)


State 57

   18 block: LBRACE blockHeadChoice .

    $default  reduce using rule 18 (block)


State 58

   19 blockHeadChoice: localVarDeclaration . blockHeadChoice

    SEMI    shift, and go to state 47
    ID      shift, and go to state 48
    RBRACE  shift, and go to state 49
    LBRACE  shift, and go to state 39
    THIS    shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    RETURN  shift, and go to state 53
    PRINT   shift, and go to state 54
    INT     shift, and go to state 19

    type                  go to state 55
    block                 go to state 56
    blockHeadChoice       go to state 89
    localVarDeclaration   go to state 58
    statement             go to state 59
    thisName              go to state 60
    name                  go to state 61
    conditionalStatement  go to state 62


State 59

   20 blockHeadChoice: statement . blockHeadChoice

    SEMI    shift, and go to state 47
    ID      shift, and go to state 48
    RBRACE  shift, and go to state 49
    LBRACE  shift, and go to state 39
    THIS    shift, and go to state 50
    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    RETURN  shift, and go to state 53
    PRINT   shift, and go to state 54
    INT     shift, and go to state 19

    type                  go to state 55
    block                 go to state 56
    blockHeadChoice       go to state 90
    localVarDeclaration   go to state 58
    statement             go to state 59
    thisName              go to state 60
    name                  go to state 61
    conditionalStatement  go to state 62


State 60

   24 statement: thisName . ASSIGN expression SEMI
   25          | thisName . LPAREN argList RPAREN SEMI

    LPAREN  shift, and go to state 91
    ASSIGN  shift, and go to state 92


State 61

   33 thisName: name .

    $default  reduce using rule 33 (thisName)


State 62

   27 statement: conditionalStatement .

    $default  reduce using rule 27 (statement)


State 63

    6 varDeclHeaderChoice: ID LPAREN parameterList RPAREN block varDeclHeaderChoice .

    $default  reduce using rule 6 (varDeclHeaderChoice)


State 64

   15 parameterListStar: COMMA parameter parameterListStar .

    $default  reduce using rule 15 (parameterListStar)


State 65

    9 varDeclHeaderChoice: ID bracks ID LPAREN parameterList RPAREN . block varDeclHeaderChoice

    LBRACE  shift, and go to state 39

    block  go to state 93


State 66

    7 varDeclHeaderChoice: VOID ID LPAREN parameterList RPAREN block . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 94


State 67

    8 varDeclHeaderChoice: INT bracks ID LPAREN parameterList RPAREN . block varDeclHeaderChoice

    LBRACE  shift, and go to state 39

    block  go to state 95


State 68

   35 name: ID DOT . name

    ID  shift, and go to state 71

    name  go to state 96


State 69

   71 brackExp: LBRACKET . expression RBRACKET brackExp
   72         | LBRACKET . expression RBRACKET
   73 bracks: LBRACKET . RBRACKET bracks
   74       | LBRACKET . RBRACKET

    ID        shift, and go to state 71
    LPAREN    shift, and go to state 76
    RBRACKET  shift, and go to state 23
    NUMBER    shift, and go to state 77
    NULLT     shift, and go to state 78
    READ      shift, and go to state 79
    NEW       shift, and go to state 80
    THIS      shift, and go to state 50
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    NOT       shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 97
    newExpression  go to state 86


State 70

   36 name: ID brackExp .

    $default  reduce using rule 36 (name)


State 71

   34 name: ID .
   35     | ID . DOT name
   36     | ID . brackExp

    DOT       shift, and go to state 68
    LBRACKET  shift, and go to state 98

    $default  reduce using rule 34 (name)

    brackExp  go to state 70


State 72

   32 thisName: THIS name .

    $default  reduce using rule 32 (thisName)


State 73

   39 conditionalStatement: IF LPAREN . expression RPAREN statement
   40                     | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 99
    newExpression  go to state 86


State 74

   28 statement: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 100
    newExpression  go to state 86


State 75

   30 statement: RETURN SEMI .

    $default  reduce using rule 30 (statement)


State 76

   42 expression: LPAREN . expression RPAREN

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 101
    newExpression  go to state 86


State 77

   43 expression: NUMBER .

    $default  reduce using rule 43 (expression)


State 78

   44 expression: NULLT .

    $default  reduce using rule 44 (expression)


State 79

   46 expression: READ . LPAREN RPAREN

    LPAREN  shift, and go to state 102


State 80

   64 newExpression: NEW . ID LPAREN argList RPAREN
   65              | NEW . newExpTypes
   66              | NEW . newExpTypes bracks
   67              | NEW . newExpTypes brackExp
   68              | NEW . newExpTypes brackExp bracks

    ID   shift, and go to state 103
    INT  shift, and go to state 104

    newExpTypes  go to state 105


State 81

   61 expression: PLUS . expression

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 106
    newExpression  go to state 86


State 82

   62 expression: MINUS . expression

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 107
    newExpression  go to state 86


State 83

   63 expression: NOT . expression

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 108
    newExpression  go to state 86


State 84

   41 expression: thisName .
   45           | thisName . LPAREN argList RPAREN

    LPAREN  shift, and go to state 109

    $default  reduce using rule 41 (expression)


State 85

   29 statement: RETURN expression . SEMI
   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression

    SEMI   shift, and go to state 110
    PLUS   shift, and go to state 111
    MINUS  shift, and go to state 112
    OR     shift, and go to state 113
    TIMES  shift, and go to state 114
    DIV    shift, and go to state 115
    MOD    shift, and go to state 116
    AND    shift, and go to state 117
    EQ     shift, and go to state 118
    NE     shift, and go to state 119
    GE     shift, and go to state 120
    LE     shift, and go to state 121
    GT     shift, and go to state 122
    LT     shift, and go to state 123


State 86

   47 expression: newExpression .

    $default  reduce using rule 47 (expression)


State 87

   26 statement: PRINT LPAREN . argList RPAREN SEMI

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    $default  reduce using rule 38 (argList)

    thisName       go to state 84
    name           go to state 61
    argList        go to state 124
    expression     go to state 125
    newExpression  go to state 86


State 88

   22 localVarDeclaration: type ID . SEMI

    SEMI  shift, and go to state 126


State 89

   19 blockHeadChoice: localVarDeclaration blockHeadChoice .

    $default  reduce using rule 19 (blockHeadChoice)


State 90

   20 blockHeadChoice: statement blockHeadChoice .

    $default  reduce using rule 20 (blockHeadChoice)


State 91

   25 statement: thisName LPAREN . argList RPAREN SEMI

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    $default  reduce using rule 38 (argList)

    thisName       go to state 84
    name           go to state 61
    argList        go to state 127
    expression     go to state 125
    newExpression  go to state 86


State 92

   24 statement: thisName ASSIGN . expression SEMI

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 128
    newExpression  go to state 86


State 93

    9 varDeclHeaderChoice: ID bracks ID LPAREN parameterList RPAREN block . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 129


State 94

    7 varDeclHeaderChoice: VOID ID LPAREN parameterList RPAREN block varDeclHeaderChoice .

    $default  reduce using rule 7 (varDeclHeaderChoice)


State 95

    8 varDeclHeaderChoice: INT bracks ID LPAREN parameterList RPAREN block . varDeclHeaderChoice

    ID      shift, and go to state 8
    RBRACE  shift, and go to state 9
    VOID    shift, and go to state 10
    INT     shift, and go to state 11

    varDeclHeaderChoice  go to state 130


State 96

   35 name: ID DOT name .

    $default  reduce using rule 35 (name)


State 97

   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression
   71 brackExp: LBRACKET expression . RBRACKET brackExp
   72         | LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 131
    PLUS      shift, and go to state 111
    MINUS     shift, and go to state 112
    OR        shift, and go to state 113
    TIMES     shift, and go to state 114
    DIV       shift, and go to state 115
    MOD       shift, and go to state 116
    AND       shift, and go to state 117
    EQ        shift, and go to state 118
    NE        shift, and go to state 119
    GE        shift, and go to state 120
    LE        shift, and go to state 121
    GT        shift, and go to state 122
    LT        shift, and go to state 123


State 98

   71 brackExp: LBRACKET . expression RBRACKET brackExp
   72         | LBRACKET . expression RBRACKET

    ID      shift, and go to state 71
    LPAREN  shift, and go to state 76
    NUMBER  shift, and go to state 77
    NULLT   shift, and go to state 78
    READ    shift, and go to state 79
    NEW     shift, and go to state 80
    THIS    shift, and go to state 50
    PLUS    shift, and go to state 81
    MINUS   shift, and go to state 82
    NOT     shift, and go to state 83

    thisName       go to state 84
    name           go to state 61
    expression     go to state 97
    newExpression  go to state 86


State 99

   39 conditionalStatement: IF LPAREN expression . RPAREN statement
   40                     | IF LPAREN expression . RPAREN statement ELSE statement
   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression

    RPAREN  shift, and go to state 132
    PLUS    shift, and go to state 111
    MINUS   shift, and go to state 112
    OR      shift, and go to state 113
    TIMES   shift, and go to state 114
    DIV     shift, and go to state 115
    MOD     shift, and go to state 116
    AND     shift, and go to state 117
    EQ      shift, and go to state 118
    NE      shift, and go to state 119
    GE      shift, and go to state 120
    LE      shift, and go to state 121
    GT      shift, and go to state 122
    LT      shift, and go to state 123


State 100

   28 statement: WHILE LPAREN expression . RPAREN statement
   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression

    RPAREN  shift, and go to state 133
    PLUS    shift, and go to state 111
    MINUS   shift, and go to state 112
    OR      shift, and go to state 113
    TIMES   shift, and go to state 114
    DIV     shift, and go to state 115
    MOD     shift, and go to state 116
    AND     shift, and go to state 117
    EQ      shift, and go to state 118
    NE      shift, and go to state 119
    GE      shift, and go to state 120
    LE      shift, and go to state 121
    GT      shift, and go to state 122
    LT      shift, and go to state 123


State 101

   42 expression: LPAREN expression . RPAREN
   48           | expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression

    RPAREN  shift, and go to state 134
    PLUS    shift, and go to state 111
    MINUS   shift, and go to state 112
    OR      shift, and go to state 113
    TIMES   shift, and go to state 114
    DIV     shift, and go to state 115
    MOD     shift, and go to state 116
    AND     shift, and go to state 117
    EQ      shift, and go to state 118
    NE      shift, and go to state 119
    GE      shift, and go to state 120
    LE      shift, and go to state 121
    GT      shift, and go to state 122
    LT      shift, and go to state 123


State 102

   46 expression: READ LPAREN . RPAREN

    RPAREN  shift, and go to state 135


State 103

   64 newExpression: NEW ID . LPAREN argList RPAREN
   69 newExpTypes: ID .

    LPAREN  shift, and go to state 136

    $default  reduce using rule 69 (newExpTypes)


State 104

   70 newExpTypes: INT .

    $default  reduce using rule 70 (newExpTypes)


State 105

   65 newExpression: NEW newExpTypes .
   66              | NEW newExpTypes . bracks
   67              | NEW newExpTypes . brackExp
   68              | NEW newExpTypes . brackExp bracks

    LBRACKET  shift, and go to state 69

    $default  reduce using rule 65 (newExpression)

    brackExp  go to state 137
    bracks    go to state 138


State 106

   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . TIMES expression
   53           | expression . DIV expression
   54           | expression . MOD expression
   55           | expression . EQ expression
   56           | expression . NE expression
   57           | expression . LT expression
   58           | expression . GT expression
   59           | expression . LE expression
   60           | expression . GE expression
   61           | PLUS expression .

    PLUS   shift, and go to state 111
    MINUS  shift, and go to state 112
    OR     shift, and go to state 113
    TIMES  shift, and go to state 114
    DIV    shift, and go to state 115
    MOD    shift, and go to state 116
    AND    shift, and go to state 117
    EQ     shift, and go to state 118
    NE     shift, and go to state 119
    GE     shift, and go to state 120
    LE     shift, and go to state 121
    GT     shift, and go to state 122
    LT     shift, and go to state 123

    $default  reduce using rule 61 (expression)


State 107
